# Hammer

./: .env.template  .gitignore  .pylintrc  pyproject.toml  train.py
configs/: __init__.py  embedd_stylegan2_config.py  faster_rcnn_config.py  stylegan2_config.py
datasets/: __init__.py  base_dataset.py  image_dataset.py  object_detection_dataset.py
datasets/data_loaders/: iter_data_loader.py
datasets/file_readers/: __init__.py  directory_reader.py
datasets/transformations/: resize.py
metrics/: __init__.py  faster_rcnn_losses.py  fid.py
models/: __init__.py  chexplaining_models.py  densenet_classifier.py  faster_rcnn.py  stylegan2_generator_wconditioned.py
notebooks/: 01. Visualize Real Images.ipynb  03. Use trained StyleGAN.ipynb  04. Visualize Faster R-CNN predictions.ipynb  05. Region-based loss.ipynb  07. Test inversion.ipynb  dataloader-ffhq.ipynb  softbox.ipynb
requirements/: calfuco.txt
runners/: __init__.py  base_runner.py  embed_stylegan2_runner.py  faster_rcnn_runner.py  stylegan2_runner.py
runners/losses/: __init__.py  embed_stylegan2_loss.py  faster_rcnn_loss.py  stylegan2_loss.py  stylegan2_region_based_loss.py
scripts/training_demos/: c_stylegan2_imagenome256.sh  c_stylegan2_imagenome256_atelectasis.sh  c_stylegan2_imagenome256_devices.sh  c_stylegan2_imagenome256_enlarged_cardiac.sh  c_stylegan2_imagenome256_lung_opacity.sh  c_stylegan2_imagenome256_pleural_effusion.sh  emb_c_stylegan2_imagenome256_enlarged_cardiac.sh  emb_r_c_stylegan2_imagenome256_enlarged_cardiac.sh  faster_rcnn_imagenome_locations.sh  (+4 more)
utils/: formatting_utils.py
(+1 files in other folders)
